# context-manager

./: .env.example  .env.windows  .gitignore  Architectural_solution.md  CHANGELOG.md  Dockerfile  LICENSE  NOTICE  README.md  context-manager-setup.iss  docker-compose.yml  mcp.json  mcp.json.template  package-lock.json  package.json  resync_qdrant.py  tsconfig.test.json  Структура проекта.md
RAG/: Python-Flask.md  iflow-wrapper.sh.md  Автоматизация контекста через Hooks.md
backup/: AUDIT_context-manager-setup.iss.md
dist_bundle/: app.d.ts  index.js
docs/: GAPS_AUDIT_WORKFLOW.md  MCP_Context_Manager_Setup_2026-01-27.md  TASK-04-download-model.md  TASK-05-install-native-ps1.md  USAGE_GUIDE_EN.html  USAGE_GUIDE_EN.md  USAGE_GUIDE_UA.html  USAGE_GUIDE_UA.md  USAGE_GUIDE_UK.html  USAGE_GUIDE_UK.md  WIN10_11_INSTALL_GUIDE.md  WIN10_11_INSTALL_WORKFLOW.md  WIN10_11_TEST_SPEC.md  WIN10_INSTALL_GUIDE.md  Win10-11_adaptation_TODO.md  build_html.py  clean_docx.py  copy_fonts.py  sync-architecture.md
embed/: embed_server.py  requirements.txt  watchdog_cm.py
mcp/: cm_http_adapter.bundle.js  cm_http_adapter.mjs  server.bundle.js  server.js  tg_bot_mcp.mjs
mcp/integration/: common.py  mcp_oauth_adapter.py  mcp_sse_adapter.py  pyproject.toml  tray_pyqt.py  tunnel_manager.py  tunnel_providers.py  tunnel_state.py  ui_meta.py
mcp/integration/cm_integration.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: build-installer.ps1  change-pg-password.ps1  download-model.ps1  init-mcp-config.mjs  install-native.ps1  install.ps1  install.sh  rename_mcp_integration.py  (+2 more)
(+79 files in other folders)
